[package]
name = "nous"
version = "0.1.0"
authors = ["Evert Provoost <evert@eprovst.net>"]
description = "νοῦς makes your plain text knowledge base more useful"
repository = "https://github.com/eprovst/nous"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
memchr = "2"
pathdiff = "0.2"
rayon = "1"
walkdir = "2"
